src/test/deca/syntax/valid/sansObjet/multipleDecl.deca
{
    int a, c, b;
    float e, f, r;
}
