src/test/deca/syntax/invalid/sansObjet/BadPrint1.deca
{
    boolean a = true;
    int x = 2020;
    float y = 2020.5f;
    print(a b y);
}